@@ -2,6 +2,7 @@ Pending Changes
 - Fixed issue where Player.cs doesn't check for all private network IPs starting with 172 (GitHub issue #2)
 - Updater should no longer crash when updating (Github issue #3)
 - /zz no longer shows an error when using "/zz blockname" (Github issue #7)
+- Player, Level, and Server now use an ExtrasCollection member named "Extras" to help manage extra data needed by custom commands
 
 v4.6.0.1
 - Command thread will no longer be manually aborted, as this can sometimes cause problems closing the socket.
